Fix site nav vertical alignment: remove default ul margin

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -38,6 +38,7 @@ body {
 
 .site-nav__links {
   list-style: none;
+  margin: 0;
   padding: 0;
   display: flex;
   flex-wrap: wrap;
